--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -45,6 +45,7 @@
     <string name="restrict_media">Mitjans (àudio, imatges, vídeos)</string>
     <string name="restrict_messages">Missatges (SMS, MMS)</string>
     <string name="restrict_network">Xarxa (adreces)</string>
+    <string name="restrict_notifications">Notifications</string>
     <string name="restrict_phone">Telèfon (ID, números, trucades)</string>
     <string name="restrict_storage">Emmagatzematge (mitjans, targeta SD)</string>
     <string name="restrict_shell">Intèrpret d\'ordres (ordres, superusuari)</string>
