--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -47,6 +47,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_media">Média (hang, fotó, videó)</string>
     <string name="restrict_messages">Üzenetek (SMS, MMS)</string>
     <string name="restrict_network">Hálózat (címek)</string>
+    <string name="restrict_notifications">Notifications</string>
     <string name="restrict_phone">Telefon (ID, számok, hívások)</string>
     <string name="restrict_storage">Tárhely (média, SD kártya)</string>
     <string name="restrict_shell">Parancssor (parancsok, rendszergazda)</string>
