--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -47,6 +47,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_media">Media (audio, foto, video)</string>
     <string name="restrict_messages">Messaggi (SMS, MMS)</string>
     <string name="restrict_network">Rete (indirizzi)</string>
+    <string name="restrict_notifications">Notifications</string>
     <string name="restrict_phone">Telefono (ID, numeri, chiamate)</string>
     <string name="restrict_storage">Memoria (media, scheda SD)</string>
     <string name="restrict_shell">Shell (comandi, superuser)</string>
