--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -47,6 +47,7 @@
     <string name="restrict_media">メディア (音楽, 写真, 動画)</string>
     <string name="restrict_messages">メッセージ (SMS, MMS)</string>
     <string name="restrict_network">ネットワーク (アドレス)</string>
+    <string name="restrict_notifications">Notifications</string>
     <string name="restrict_phone">電話 (ID, 電話番号, 通話)</string>
     <string name="restrict_storage">ストレージ (メディア, SDカード)</string>
     <string name="restrict_shell">シェル (コマンド, Superuser)</string>
