--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -38,7 +38,7 @@
     <string name="restrict_browser">Brskalnik (zaznamki/zgodovina)</string>
     <string name="restrict_calendar">Koledar</string>
     <string name="restrict_calling">Klicanje (telefon, SMS, MMS)</string>
-    <string name="restrict_clipboard">Clipboard</string>
+    <string name="restrict_clipboard">Odložišče</string>
     <string name="restrict_contacts">Stiki</string>
     <string name="restrict_dictionary">Slovar (uporabnik)</string>
     <string name="restrict_identification">Identifikacija (naprava)</string>
@@ -47,7 +47,7 @@
     <string name="restrict_media">Medij (zvok, slike, video)</string>
     <string name="restrict_messages">Sporočila (SMS, MMS)</string>
     <string name="restrict_network">Omrežje (naslovi)</string>
-    <string name="restrict_notifications">Notifications</string>
+    <string name="restrict_notifications">Obvestila</string>
     <string name="restrict_phone">Telefon (ID, številke, klici)</string>
     <string name="restrict_storage">Pomnilnik (medij, SD kartica)</string>
     <string name="restrict_shell">Lupina (ukazi, superuser)</string>
@@ -55,7 +55,7 @@
     <string name="restrict_view">Pogled (brskalnik)</string>
     <string name="title_category">Kategorija:</string>
     <string name="title_restrict">Označi za omejitev pravic:</string>
-    <string name="settings_serial">Serial#</string>
+    <string name="settings_serial">Serijska št.</string>
     <string name="settings_lat">Geografska širina</string>
     <string name="settings_lon">Geografska dolžina</string>
     <string name="settings_mac">MAC naslov</string>
