--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Не установлен Xposed framework версии %d+</string>
     <string name="app_notenabled">Модуль XPrivacy не активирован в Xposed installer</string>
-    <string name="app_wrongandroid">Only for Android version 4.0+</string>
+    <string name="app_wrongandroid">Только для Android версии 4.0 и выше</string>
     <string name="app_version" formatted="false">Версия XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Версия Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
@@ -38,7 +38,7 @@
     <string name="restrict_browser">Браузер (закладки/история)</string>
     <string name="restrict_calendar">Календарь</string>
     <string name="restrict_calling">Инициация звонков, отправка SMS/MMS</string>
-    <string name="restrict_clipboard">Clipboard</string>
+    <string name="restrict_clipboard">Буфер обмена</string>
     <string name="restrict_contacts">Контакты</string>
     <string name="restrict_dictionary">Пользовательский словарь</string>
     <string name="restrict_identification">Идентификация устройства</string>
@@ -47,7 +47,7 @@
     <string name="restrict_media">Медиа (аудио, фото, видео)</string>
     <string name="restrict_messages">Сообщения (SMS, MMS)</string>
     <string name="restrict_network">Сеть (адреса)</string>
-    <string name="restrict_notifications">Notifications</string>
+    <string name="restrict_notifications">Уведомления</string>
     <string name="restrict_phone">Телефон (ID, номера, журнал вызовов)</string>
     <string name="restrict_storage">Хранилище (медиа, карта памяти)</string>
     <string name="restrict_shell">Команды shell (вкл. суперпользователя)</string>
@@ -55,7 +55,7 @@
     <string name="restrict_view">Просмотр (браузер)</string>
     <string name="title_category">Категория:</string>
     <string name="title_restrict">Отметьте приложения:</string>
-    <string name="settings_serial">Serial#</string>
+    <string name="settings_serial">Серийный номер</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
     <string name="settings_mac">MAC-адрес</string>
