--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -2,12 +2,12 @@
 
     <string name="app_notxposed" formatted="false">Az Xposed keretrendszer %d+ nincs telepítve</string>
     <string name="app_notenabled">Az XPrivacy nincs engedélyezve az Xposed telepítőben</string>
-    <string name="app_wrongandroid">Only for Android version 4.0+</string>
+    <string name="app_wrongandroid">Csak Android 4.0 felett</string>
     <string name="app_version" formatted="false">XPrivacy verzió: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed keretrendszer verzió: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
-    <string name="menu_usage">Usage</string>
-    <string name="menu_refresh">Refresh</string>
+    <string name="menu_usage">Használat</string>
+    <string name="menu_refresh">Frissítés</string>
     <string name="menu_settings">Beállítások</string>
     <string name="menu_template">Sablon</string>
     <string name="menu_update">Frissítés keresése</string>
@@ -31,16 +31,16 @@
     <string name="msg_sure">Biztos benne?</string>
     <string name="msg_done">Kész</string>
     <string name="msg_reboot">Újraindítás szükséges</string>
-    <string name="msg_random">Randomize</string>
-    <string name="msg_random_boot">Randomize after boot</string>
-    <string name="msg_first"><b>Great care has been taken to develop and test XPrivacy,
-however it is impossible to guarantee it will work flawless on each and every device and for each and every application.
-\n\nUse is entirely at your own risk.</b>\n\nSee also the license:</string>
+    <string name="msg_random">Véletlenszerűsítés</string>
+    <string name="msg_random_boot">Véletlenszerűsítés boot után</string>
+    <string name="msg_first"><b>Az XPrivacy fejlesztése és tesztelése nagy gondossággal történik,
+de lehetetlen garantálni hogy tökéletesen működjön az összes eszközön és az összes alkalmazással.
+\n\nCsak saját felelősségre.</b>\n\nNézze meg a licenszet is:</string>
     <string name="restrict_accounts">Fiókok (Google, Facebook, stb.)</string>
     <string name="restrict_browser">Böngésző (könyvjelzők / előzmények)</string>
     <string name="restrict_calendar">Naptár</string>
     <string name="restrict_calling">Hívás (telefon, SMS, MMS)</string>
-    <string name="restrict_clipboard">Clipboard</string>
+    <string name="restrict_clipboard">Vágólap</string>
     <string name="restrict_contacts">Névjegyzék</string>
     <string name="restrict_dictionary">Szótár (felhasználó)</string>
     <string name="restrict_identification">Azonosító (eszköz)</string>
@@ -57,7 +57,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="restrict_view">Megtekintés (böngésző)</string>
     <string name="title_category">Kategória:</string>
     <string name="title_restrict">Jelölje be a korlátozáshoz:</string>
-    <string name="settings_serial">Serial#</string>
+    <string name="settings_serial">Sorozatszám#</string>
     <string name="settings_lat">Szélesség</string>
     <string name="settings_lon">Hosszúság</string>
     <string name="settings_mac">MAC-cím</string>
@@ -71,7 +71,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_internet">Internet engedély</string>
     <string name="help_granted">Android engedély</string>
     <string name="help_used">Használta ezt az adatot</string>
-    <string name="help_frozen">is disabled</string>
+    <string name="help_frozen">Ki van kapcsolva</string>
     <string name="help_dangerous">Veszélyes</string>
 
 </resources>
