--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -2,7 +2,7 @@
 
     <string name="app_notxposed" formatted="false">Xposed framework wersja %d+ nie jest zainstalowany</string>
     <string name="app_notenabled">XPrivacy nie został włączony w instalatorze Xposed</string>
-    <string name="app_wrongandroid">Only for Android version 4.0+</string>
+    <string name="app_wrongandroid">Tylko dla Androida w wersji 4.0+</string>
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
@@ -31,8 +31,8 @@
     <string name="msg_sure">Czy jesteś pewny/a?</string>
     <string name="msg_done">Gotowe</string>
     <string name="msg_reboot">Wymagany restart</string>
-    <string name="msg_random">Randomize</string>
-    <string name="msg_random_boot">Randomize after boot</string>
+    <string name="msg_random">Losuj</string>
+    <string name="msg_random_boot">Losuj po restarcie</string>
     <string name="msg_first"><b>Dołożyliśmy wszelkich starań podczas programowania i testów XPrivacy.
     Jednak nie możemy zagwarantować, że będzie on działać bezbłędnie na każdym urządzeniu oraz z każdą aplikacją.
 \n\nUżywasz go całkowicie na własne ryzyko.</b>\n\nZobacz też licencję:</string>
@@ -40,7 +40,7 @@
     <string name="restrict_browser">Przeglądarka (zakładki/historia)</string>
     <string name="restrict_calendar">Kalendarz</string>
     <string name="restrict_calling">Połączenia (telefoniczne, SMS, MMS)</string>
-    <string name="restrict_clipboard">Clipboard</string>
+    <string name="restrict_clipboard">Schowek</string>
     <string name="restrict_contacts">Kontakty</string>
     <string name="restrict_dictionary">Słownik (użytkownik)</string>
     <string name="restrict_identification">Identyfikacja (urządzenie)</string>
@@ -57,7 +57,7 @@
     <string name="restrict_view">Widok (przeglądarka)</string>
     <string name="title_category">Kategoria:</string>
     <string name="title_restrict">Zaznacz aby zablokować:</string>
-    <string name="settings_serial">Serial#</string>
+    <string name="settings_serial">Numer seryjny</string>
     <string name="settings_lat">Szerokość geograficzna</string>
     <string name="settings_lon">Długość geograficzna</string>
     <string name="settings_mac">Adres MAC</string>
