--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -31,8 +31,8 @@
     <string name="msg_sure">続行しますか?</string>
     <string name="msg_done">完了</string>
     <string name="msg_reboot">再起動してください</string>
-    <string name="msg_random">Randomize</string>
-    <string name="msg_random_boot">Randomize after boot</string>
+    <string name="msg_random">ランダム化</string>
+    <string name="msg_random_boot">起動時にランダム化する</string>
     <string name="msg_first"><b>XPrivacyは細心の注意を払って開発･テストしていますが、
 どの端末、どのアプリでも動作するという保証はありません。
 \n\n自己責任でお使いください。</b>\n\nライセンスの詳細はこちら:</string>
