--- a/res/values-nn-rNO/strings.xml
+++ b/res/values-nn-rNO/strings.xml
@@ -8,18 +8,18 @@
     <string name="app_copyright">Opphavsbeskyttet \u00A9 M. Bokhorst (M66B) 2013</string>
     <string name="menu_usage">Bruk</string>
     <string name="menu_refresh">Oppdater</string>
-    <string name="menu_settings">Instillinger</string>
+    <string name="menu_settings">Innstillinger</string>
     <string name="menu_template">Skjema</string>
     <string name="menu_update">Sjekk for oppdatering</string>
     <string name="menu_report">Rapport en feil</string>
-    <string name="menu_export">Eksport</string>
-    <string name="menu_import">Import</string>
+    <string name="menu_export">Eksporter</string>
+    <string name="menu_import">Importer</string>
     <string name="menu_theme">Bytt tema</string>
     <string name="menu_pro">Pro versjon</string>
     <string name="menu_about">Om</string>
     <string name="menu_all">Alle</string>
     <string name="menu_app_launch">Kjør</string>
-    <string name="menu_app_settings">Instillinger</string>
+    <string name="menu_app_settings">Innstillinger</string>
     <string name="menu_app_store">Play Store</string>
     <string name="menu_accounts">Velg konto som skal tillates</string>
     <string name="menu_contacts">Velg kontakter som skal tillates</string>
